<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.TeamFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        style="@style/ToolbarTitleText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/about_bottom_nav" />

        <TextView
            android:id="@+id/whoWorkedOnIt"
            android:layout_width="@dimen/space_0"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space_16"
            android:layout_marginTop="@dimen/space_24"
            android:fontFamily="@font/ys_display_bold"
            android:text="@string/workers_title_tv"
            android:textColor="?attr/colorSecondary"
            android:textSize="@dimen/font_32"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <TextView
            android:id="@+id/member1"
            style="@style/TeamTextview"
            android:layout_width="@dimen/space_0"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_32"
            android:text="@string/worker_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/whoWorkedOnIt" />

        <TextView
            android:id="@+id/member2"
            style="@style/TeamTextview"
            android:layout_width="@dimen/space_0"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_16"
            android:text="@string/worker_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/member1" />

        <TextView
            android:id="@+id/member3"
            style="@style/TeamTextview"
            android:layout_width="@dimen/space_0"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_16"
            android:text="@string/worker_3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/member2" />

        <TextView
            android:id="@+id/member4"
            style="@style/TeamTextview"
            android:layout_width="@dimen/space_0"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_16"
            android:text="@string/worker_4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/member3" />
    </androidx.constraintlayout.widget.ConstraintLayout>
