<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/itemVacancyDetailsView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorSecondaryVariant">

    <TextView
        android:id="@+id/nameVacancyTv"
        style="@style/Bold32TextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"
        tools:visibility="visible"
        tools:text="@string/job_description_tv"/>

    <TextView
        android:id="@+id/vacancySalaryTv"
        style="@style/Medium22TextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_8"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameVacancyTv"
        tools:text="@string/salary_from" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cardInfoCompanyCv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_24"
        android:background="@drawable/background_for_vacancydetails_card"
        android:padding="@dimen/space_16"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vacancySalaryTv">

        <ImageView
            android:id="@+id/logoCompanyIv"
            android:layout_width="@dimen/size_48"
            android:layout_height="@dimen/size_48"
            android:src="@drawable/placeholder"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/nameCompanyTv"
            style="@style/Medium22TextStyle"
            android:textColor="@color/black_universal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/logoCompanyIv"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Хорошая компания" />

        <TextView
            android:id="@+id/adressCompanyTv"
            android:textColor="@color/black_universal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/logoCompanyIv"
            app:layout_constraintTop_toBottomOf="@+id/nameCompanyTv"
            tools:text="Краснодар"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/experienceTv"
        style="@style/Medium16TextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_24"
        android:text="@string/required_experience_tv"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardInfoCompanyCv" />

    <TextView
        android:id="@+id/valueExperienceTv"
        style="@style/Regular16TextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/experienceTv"
        tools:text="@string/salary_from_to" />

    <TextView
        android:id="@+id/formatWorkTv"
        style="@style/Regular16TextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/valueExperienceTv"
        tools:text="удаленка крч"/>

    <TextView
        android:id="@+id/vacancyDescriptionTv"
        style="@style/Medium22TextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_24"
        android:text="@string/job_description_tv"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/formatWorkTv" />

    <TextView
        android:id="@+id/descriptionVacancy"
        style="@style/Medium16TextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_16"
        android:layout_marginBottom="@dimen/space_16"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vacancyDescriptionTv"
        app:layout_constraintVertical_bias="0.0"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/key_skills"
        style="@style/Medium22TextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_16"
        android:text="@string/key_skills_tv"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionVacancy"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/vacancyKeySkillsTv"
        style="@style/Regular16TextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_8"
        android:layout_marginBottom="@dimen/space_24"
        android:text="@string/key_skills_tv"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/key_skills"
        tools:text="@string/key_skills_tv"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>
